--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
   </head>
   <body>
-  <h1 class="classOne">This is my portfolio</h1>
+  <h1 class="classOne">This is not my portfolio</h1>
     
     <script src="newScript3.js"></script>
 
