--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
   <h1 class="classOne">This is not my portfolio</h1>
     
-    <script src="newScript.js"></script>
+    <script src="newScript1.js"></script>
 
   </body>
 </html>
